--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </h1> <!--this is the closing tag-->
  </header>
  <main>
+    <a href="itis3135/">Click here to go to my ITIS 3135 page</a>
     <h2> 
         Welcome to my site!
     </h2>
