--- a/index.html
+++ b/index.html
@@ -14,20 +14,25 @@
  <main>
     <a href="itis3135/">Click here to go to my ITIS 3135 page</a>
     <h2> 
-        Welcome to my site!
+        HomePage
     </h2>
     <p> 
-        My name is Alanah
+       Welcome to my site! Feel free to explore
     </p>
     <p> 
-        I go to UNCC
+        Introduction Page
     </p>
+    <a href = "introduction.html">Introduction</a>
  </main>
 
  <footer>
     <hr> 
     Demo site created for class
- </hr>
+    </hr>
  </footer>   
+
+ <title> 
+    Alanah's Charlotte Website | HomePage
+ </title>
 </body>
 </html>
