--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
        Welcome to my site! Feel free to explore
     </p>
     <p> 
-        Introduction Page
+        Introduction Page:
     </p>
     <a href = "introduction.html">Introduction</a>
  </main>
 
  <footer>
     <hr> 
-    Demo site created for class
+    <a href = "https://webpages.charlotte.edu/alittl70/"> CLT Website</a>
     </hr>
  </footer>   
 
