--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alanah's Charlotte Website</title>
 </head>
+<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 <body>
  <header>
     <h1> <!-- this is the opening tag-->
