--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alanah's Charlotte Website</title>
+    <title>Alanah's Charlotte Website | HomePage </title>
 </head>
-<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+
 <body>
  <header>
     <h1> <!-- this is the opening tag-->
         Alanah's Charlotte Website  <!-- This whole thing is the element-->
     </h1> <!--this is the closing tag-->
  </header>
+
  <main>
     <a href="itis3135/">Click here to go to my ITIS 3135 page</a>
+    
     <h2> 
         HomePage
     </h2>
+
     <p> 
        Welcome to my site! 
        My name is Alanah and I am a junior here at UNC Charlotte studying Computer Science with a focus on Human-Computer Interaction. 
@@ -29,12 +32,15 @@
 
  <footer>
     <hr> 
-    <a href = "https://webpages.charlotte.edu/alittl70/"> CLT Website |</a> <a href = "https://alittl70.github.io/"> GitHub.io |</a> <a href="https://github.com/alittl70"> GitHub |</a> <a href = "https://www.freecodecamp.org/alittl70" > freeCodeCamp |</a> <a href = "https://www.linkedin.com/in/alanah-little/" > LinkedIn</a>
-    </hr>
+    <a href = "https://webpages.charlotte.edu/alittl70/"> CLT Website |</a> 
+    <a href = "https://alittl70.github.io/"> GitHub.io |</a>
+    <a href="https://github.com/alittl70"> GitHub |</a> 
+    <a href = "https://www.freecodecamp.org/alittl70" > freeCodeCamp |</a> 
+    <a href = "https://www.linkedin.com/in/alanah-little/" > LinkedIn</a>
+    <hr>
  </footer>   
 
- <title> 
-    Alanah's Charlotte Website | HomePage
- </title>
+<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </body>
 </html>
+
