--- a/introduction.html
+++ b/introduction.html
@@ -17,7 +17,9 @@
 
 
     <footer>
-        <p> [Footer Links go here] </p>
+        <p> 
+            <a href=" https://alittl70.github.io/"> return to Home Page</a>
+        </p>
     </footer>
 
 
