--- a/introduction.html
+++ b/introduction.html
@@ -11,8 +11,44 @@
        Alanah Little | Adventurous Lion 
     </header>
 
+    <figure>
+        <img src= "images/me.jpg" alt="Photo of Alanah Little " width = "300">
+        <figcaption> Visited the Osaka Aquarium Kaiyukan in Japan with my boyfriend.</figcaption>
+    </figure>
+
+    <!-- Personal Statement -->
     <main>
-        <p>I am a junior here at UNC Charlotte studying Computer Science with a focus on Human-Computer Interaction. I am excited to apply the skills I've learned in this class to personal projects I plan to work on throughout the year.</p>
+        <p>Hi! My name is Alanah Little. I’m a junior at UNC Charlotte studying Computer Science with a focus on Human-Computer Interaction.
+           I'm interested in UX design, usability, and building products that feel simple and helpful.
+        </p>
+
+    <!-- Bulleted items: unordered list -->
+        <h2> Fun Facts About Me</h2>
+        <ul>
+            <li>
+             Personal Background:  I'm currently 20 years old, I love traveling and trying new foods, and I enjoy learning how improve my front-end coding skills as the semesters go by. 
+            </li>
+
+            <li>
+              Professional Background: I am currently a Server Assistant at Eddie V’s Prime Seafood and have been working there for 1 year and 10 months. I also worked at Dicks Sporting Goods for 1 year, and I was a Taekwondo Instructor for 5 years.
+            </li>
+
+            <li>
+              Academic Background: I'm currently a Junior here at UNC Charlotte studying computer science with a focus in Human-Computer Interaction. Before that, I attend Highschool in Garner, North Carolina. 
+            </li>
+
+            <li>
+              Primary Work Computer: The laptop I use for university is a MacBook Pro M2 13-inch.   
+            </li>
+
+            <li>
+               Backup Work Computer and Location Plan: I will go to the Atkins Library and get a loaner laptop. Apartment and Atkins Library. 
+            </li>
+        </ul>
+
+    
+    <!-- Courses taking: ordered list -->
+
     </main>
 
 
