--- a/introduction.html
+++ b/introduction.html
@@ -13,7 +13,9 @@
 
     <figure>
         <img src= "images/me.jpg" alt="Photo of Alanah Little " width = "300">
-        <figcaption> Visited the Osaka Aquarium Kaiyukan in Japan with my boyfriend.</figcaption>
+        <figcaption> 
+            Visited the Osaka Aquarium Kaiyukan in Japan with my boyfriend.
+        </figcaption>
     </figure>
 
     <!-- Personal Statement -->
@@ -44,11 +46,33 @@
             <li>
                Backup Work Computer and Location Plan: I will go to the Atkins Library and get a loaner laptop. Apartment and Atkins Library. 
             </li>
+
+            <li>
+               Funny/ Interesting item to remember me by: When I was a kid, I won a trophy during a pep rally for having the best dance.
+            </li>
+
+            <li>
+               I’d also like to share: I was born in California.
+            </li>
         </ul>
 
     
     <!-- Courses taking: ordered list -->
+    <h2>Courses I’m Taking & Why: </h2>
+    <ol> 
+        <li>ITSC3688 - Computers and Their Impact on Society: A required and interesting class for me to develop and refine my professional skills.</li>
+        <li>STAT1220 -Elements of Stat I:  Required course. </li>
+        <li>ITSC3135 - Front-End Web Application Development: Required and interesting class.</li>
+        <li>ITSC2600 -Computer-Science Program, Identity, Career: Required and interesting class. </li>
+        <li>ITSC 4350- Design Prototyping: Required and interesting class. </li>
+    </ol>
 
+    <!-- Quote Requirement: -->
+     <h2> Favorite Quote </h2>
+     <blockquote> 
+        "The real voyage of discovery consists not in seeking new landscapes, but in having new eyes."
+        <cite>- <a href="https://stanphelps.com/the-voyage-of-discovery-is-not-in-seeking-new-landscapes-but-in-having-new-eyes-marcel-proust/#:~:text=In%20the%20words%20of%20Marcel,managing%20relationships%20and%20minimizing%20pressure." > </a> Marcel Proust </cite>
+     </blockquote>
     </main>
 
 
