Updating my ordered list
update

--- a/introduction.html
+++ b/introduction.html
@@ -60,11 +60,19 @@
     <!-- Courses taking: ordered list -->
     <h2>Courses I’m Taking & Why: </h2>
     <ol> 
+        <li> Major Related Courses:
+            <ol> 
         <li>ITSC3688 - Computers and Their Impact on Society: A required and interesting class for me to develop and refine my professional skills.</li>
-        <li>STAT1220 -Elements of Stat I:  Required course. </li>
         <li>ITSC3135 - Front-End Web Application Development: Required and interesting class.</li>
         <li>ITSC2600 -Computer-Science Program, Identity, Career: Required and interesting class. </li>
         <li>ITSC 4350- Design Prototyping: Required and interesting class. </li>
+            </ol>
+        </li> 
+        <li> Math / Statistics
+            <ol>
+        <li>STAT1220 - Elements of Stat I:  Required course. </li>
+            </ol>
+        </li>
     </ol>
 
     <!-- Quote Requirement: -->
