--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  </header>
 
  <main>
-    <a href="itis3135/">Click here to go to my ITIS 3135 page</a>
+    <a href="http://127.0.0.1:5500/itis3135/index.html">Click here to go to my ITIS 3135 page</a>
     
     <h2> 
         Home Page
