Resize image to 800px

--- a/introduction.html
+++ b/introduction.html
@@ -12,7 +12,7 @@
     </header>
 
     <figure>
-        <img src= "images/me.jpg" alt="Photo of Alanah Little " width = "300">
+        <img src= "images/trip.jpg" alt="Photo of Alanah Little " width = "200">
         <figcaption> 
             Visited the Osaka Aquarium Kaiyukan in Japan with my boyfriend.
         </figcaption>
