Final updates on introduction page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alanah's Charlotte Website | HomePage </title>
+    <title>Alanah's Charlotte Website | Home Page </title>
 </head>
 
 <body>
@@ -13,20 +13,18 @@
     </h1> <!--this is the closing tag-->
  </header>
 
+
  <main>
-    <a href="http://127.0.0.1:5500/itis3135/index.html">Click here to go to my ITIS 3135 page</a>
-    
-    <h2> 
-        Home Page
-    </h2>
+    <h2>Home Page</h2>
+
+    <a href="itis3135/index.html">Click here to go to my ITIS 3135 page</a>
 
     <p> 
        Welcome to my site! 
        My name is Alanah and I am a junior here at UNC Charlotte studying Computer Science with a focus on Human-Computer Interaction. 
     </p>
-    <p> 
-        Introduction Page:
-    </p>
+
+    <p>  Introduction Page: </p>
     <a href = "introduction.html">Click Here</a>
  </main>
 
