ITIS 3135 Welcome Page

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
        My name is Alanah and I am a junior here at UNC Charlotte studying Computer Science with a focus on Human-Computer Interaction. 
     </p>
 
-    <p>  Introduction Page: </p>
+    <h3>  Introduction Page: </h3>
     <a href = "introduction.html">Click Here</a>
  </main>
 
  <footer>
     <hr> 
-    <a href = "https://webpages.charlotte.edu/alittl70/"> CLT Website |</a> 
-    <a href = "https://alittl70.github.io/"> GitHub.io |</a>
-    <a href="https://github.com/alittl70"> GitHub |</a> 
-    <a href = "https://www.freecodecamp.org/alittl70" > freeCodeCamp |</a> 
+    <a href = "https://webpages.charlotte.edu/alittl70/"> CLT Website  |</a> 
+    <a href = "https://alittl70.github.io/"> GitHub.io  |</a>
+    <a href="https://github.com/alittl70"> GitHub  |</a> 
+    <a href = "https://www.freecodecamp.org/alittl70" > freeCodeCamp  |</a> 
     <a href = "https://www.linkedin.com/in/alanah-little/" > LinkedIn</a>
     
  </footer>   
