--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>ITIS 3135 Course Page</title>
+ <title>Alanah Little Adventurous Lion - ITIS 3135 | Welcome </title>
 </head>
-<body>
 
-    <h1>Hello! My name is Alanah and this is my ITIS 3135 Course Page</h1>
+<body>
+    <header> 
+    <h1>Alanah Little Adventurous Lion - ITIS 3135</h1>
+    </header>
+
+    <h2> Welcome </h2>
+
+    <main>
     <p> This page will contain my work for ITIS 3135.</p>
     <a href = "https://alittl70.github.io/" > Back to Home </a>
+    </main>
+
+    <footer>
+    <hr>
+    <a href = "https://webpages.charlotte.edu/alittl70/"> CLT Website  |</a> 
+    <a href = "https://alittl70.github.io/"> GitHub.io  |</a>
+    <a href="https://github.com/alittl70"> GitHub  |</a> 
+    <a href = "https://www.freecodecamp.org/alittl70" > freeCodeCamp  |</a> 
+    <a href = "https://www.linkedin.com/in/alanah-little/" > LinkedIn</a>
+    </footer>
 </body>
