--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Alanah Little Adventurous Lion - ITIS 3135 | Welcome </title>
+<nav>
+    <a href = "https://alittl70.github.io/" > Back to Home </a>
+    <a href = "contract.html" > Contract Page </a>
+</nav>
 </head>
 
 <body>
@@ -15,7 +19,6 @@
 
     <main>
     <p> This page will contain my work for ITIS 3135.</p>
-    <a href = "https://alittl70.github.io/" > Back to Home </a>
     </main>
 
     <footer>
@@ -27,3 +30,4 @@
     <a href = "https://www.linkedin.com/in/alanah-little/" > LinkedIn</a>
     </footer>
 </body>
+</html>
