--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Alanah Little Adventurous Lion - ITIS 3135 | Welcome </title>
 <nav>
-    <a href = "https://alittl70.github.io/" > Back to Home </a>
+    <a href = "https://alittl70.github.io/" > Home Page  | </a>
     <a href = "contract.html" > Contract Page </a>
 </nav>
 </head>
