--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -12,9 +12,11 @@
 <h1> Contract Page</h1>
 
 <p>
-    I, Alanah C. Little agree to abide by the terms of the course contract in my Spring 2026, ITIS3135-054, Front-End Web Application Development with my instructor, Professor D.I. von Briesen. I understand that all work that I do on publicly available online tools will be available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private. I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences. I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates’ code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit (i.e. external libraries) and never from my classmates. Signed: Alanah C. Little , 25/01/2026
+    I, Alanah C. Little agree to abide by the terms of the course contract in my Spring 2026, ITIS3135-054, Front-End Web Application Development with my instructor, Professor D.I. von Briesen. I understand that all work that I do on publicly available online tools will be available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private. 
+</p>
 
- 
+<p>
+    I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences. I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates’ code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit (i.e. external libraries) and never from my classmates. Signed: Alanah C. Little , 25/01/2026
 </p>
 
 </head>
