Update title page

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Alanah Little Adventurous Lion - ITIS 3135 | Welcome </title>
+ <title>Alanah Little Adventurous Lion-ITIS 3135 | Welcome Page </title>
 <nav>
     <a href = "https://alittl70.github.io/" > Home Page  | </a>
     <a href = "contract.html" > Contract Page </a>
