--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -19,4 +19,7 @@
     I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences. I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates’ code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit (i.e. external libraries) and never from my classmates. Signed: Alanah C. Little , 25/01/2026
 </p>
 
-</head>
+
+
+<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+
