--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -8,9 +8,8 @@
     <a href = "https://alittl70.github.io/" > Home Page  | </a>
     <a href = "contract.html" > Contract Page </a>
 </nav>
-</head>
 
-<body>
+
     <header> 
     <h1>Alanah Little Adventurous Lion - ITIS 3135</h1>
     </header>
@@ -29,5 +28,7 @@
     <a href = "https://www.freecodecamp.org/alittl70" > freeCodeCamp  |</a> 
     <a href = "https://www.linkedin.com/in/alanah-little/" > LinkedIn</a>
     </footer>
+
+<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </body>
 </html>
