--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -1,13 +1,37 @@
+<!-- Must start with this first.-->
 <!DOCTYPE html>
 <html lang="en">
 
+<!--Sets the character encoding so text displays correctly.-->
 <head>
     <meta charset="UTF-8">
+    <!-- Makes the page responsive on mobile devices.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!--Title shown on the browser tab.-->
  <title>Alanah Little Adventurous Lion - ITIS 3135 | Contract Page </title>
+</head>
+
+<!-- Everything the user sees on the page goes inside the body.-->
+<body>
+
+<!-- Header Include-->
+ <div data-include= "../components/header.html" ></div>
+
+ <!--
+ Local navigation specific to this page.
+ This is separate from the global header navigation.
+ -->
 <nav>
     <a href = "index.html" > Back </a>
 </nav>
+
+<!--
+Main contents of the webpage.
+is a semantic element that represents
+the primary content of the document. 
+-->
+<main>
 
 <h1> Contract Page</h1>
 
@@ -18,8 +42,19 @@
 <p>
     I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences. I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates’ code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit (i.e. external libraries) and never from my classmates. Signed: Alanah C. Little , 25/01/2026
 </p>
+</main>
+
+<!-- Footer Include-->
+<div data-include="../components/footer.html"></div>
 
 
+<!-- HTMLInclude from Paul-Browne -->
+<script src= "../scripts/include.min.js"></script>
 
+<!-- Accumulus -->
 <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+
+</body>
+</html>
+
 
