--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
+<!-- Must start with this first.-->
 <!DOCTYPE html>
 <html lang="en">
+
+<!--Sets the character encoding so text displays correctly.-->
 <head>
     <meta charset="UTF-8">
+        <!-- Makes the page responsive on mobile devices.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--Title shown on the browser tab.-->
     <title>Alanah's Charlotte Website | Home Page </title>
 </head>
 
+<!-- Everything the user sees on the page goes inside the body.-->
 <body>
- <header>
+
+<!-- Header Include-->
+ <div data-include= "../components/header.html" ></div>
+
     <h1> <!-- this is the opening tag-->
         Alanah's Charlotte Website  <!-- This whole thing is the element-->
     </h1> <!--this is the closing tag-->
- </header>
 
-
+<!--
+Main contents of the webpage.
+is a semantic element that represents
+the primary content of the document. 
+-->
  <main>
     <h2>Home Page</h2>
 
@@ -28,17 +40,25 @@
     <a href = "introduction.html">Click Here</a>
  </main>
 
- <footer>
-    <hr> 
+    <p>
     <a href = "https://webpages.charlotte.edu/alittl70/"> CLT Website  |</a> 
     <a href = "https://alittl70.github.io/"> GitHub.io  |</a>
     <a href="https://github.com/alittl70"> GitHub  |</a> 
     <a href = "https://www.freecodecamp.org/alittl70" > freeCodeCamp  |</a> 
     <a href = "https://www.linkedin.com/in/alanah-little/" > LinkedIn</a>
-    
- </footer>   
+   </p>
 
+<!-- Footer Include-->
+<div data-include="../components/footer.html"></div>
+
+<!-- HTMLInclude from Paul-Browne -->
+<script src= "../scripts/include.min.js"></script>
+    
+<!-- Accumulus -->
 <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
+
 
