make CSS changes to the site

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <!-- Makes the page responsive on mobile devices.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/default.css">
 
 <!--Title shown on the browser tab.-->
  <title>Alanah Little Adventurous Lion-ITIS 3135 | Welcome Page </title>
