updating styles of homepage and introduction page

--- a/introduction.html
+++ b/introduction.html
@@ -24,9 +24,9 @@
 
 <!-- Image Input: -->
     <figure>
-        <img src= "images/trip.jpg" alt="Photo of Alanah Little " width = "200">
+        <img src= "images/trip.jpg" alt="Photo of Alanah Little " width = "400">
         <figcaption> 
-            Visited the Osaka Aquarium Kaiyukan in Japan with my boyfriend.
+            Visited the Aquarium in Japan with my boyfriend.
         </figcaption>
     </figure>
 
