Update CSS on index.html

--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@ the primary content of the document.
     <a href = "introduction.html">Click Here</a>
  </main>
 
-    <p>
+
+    <nav class = "site-nav"></nav>
     <a href = "https://webpages.charlotte.edu/alittl70/"> CLT Website |</a> 
     <a href = "https://alittl70.github.io/"> GitHub.io |</a>
     <a href="https://github.com/alittl70"> GitHub |</a> 
     <a href = "https://www.freecodecamp.org/alittl70" > freeCodeCamp |</a> 
     <a href = "https://www.linkedin.com/in/alanah-little/" > LinkedIn</a>
-   </p>
+   </nav>
 
+<br> 
 <!-- Footer Include-->
 <div data-include="../components/footer.html"></div>
 
