--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -24,6 +24,8 @@
  -->
 <nav>
     <a href = "index.html" > Back </a>
+    <a href = "website_evaluations.html" > Website Evaluation Page</a>
+
 </nav>
 
 <!--
