--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -23,7 +23,7 @@
  This is separate from the global header navigation.
  -->
 <nav>
-    <a href = "index.html" > Back </a>
+    <a href = "index.html" > Back | </a>
     <a href = "website_evaluations.html" > Website Evaluation Page</a>
 
 </nav>
