Fixed link issues

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/default.css">
-  <title>Alanah Little Adventurous Lion - ITIS 3135 | Welcome Page</title>
+  <title>Alanah Little Adventurous Lion ITIS 3135 | Welcome Page</title>
 </head>
 
 <body>
@@ -16,11 +16,12 @@
   <nav class="site-nav">
     <a href="https://alittl70.github.io/">Home Page</a>
     <a href="contract.html">Contract Page</a>
-    <a href="website_evaluations.html">Website Evaluations</a>
+    <a href = "/itis3135/website_evaluations.html" > Website Evaluation Page</a>
+
   </nav>
 
   <main>
-    <h1>Alanah Little Adventurous Lion - ITIS 3135</h1>
+    <h1>Alanah Little Adventurous Lion | ITIS 3135</h1>
 
     <h2>Welcome</h2>
 
