--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <a href="index.html">Home</a>
       <a href="introduction.html">Introduction</a>
       <a href="itis3135/index.html">ITIS 3135</a>
+      <a href="/itis3135/website_evaluations.html" > Website Evaluation Page</a>
+
     </nav>
   </header>
 
