--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -24,7 +24,7 @@
  -->
 <nav>
     <a href = "index.html" > Back | </a>
-    <a href = "website_evaluations.html" > Website Evaluation Page</a>
+    <a href = "/itis3135/website_evaluations.html" > Website Evaluation Page</a>
 
 </nav>
 
