--- a/certifications/gallery.html
+++ b/certifications/gallery.html
@@ -10,7 +10,24 @@
 <body>
 
   <!-- Header Include -->
-  <div data-include="../components/header.html"></div>
+   <nav>
+        <a href="../index.html">Home</a> |
+        <a href="../introduction.html">Introduction</a> |
+        <a href="../contract.html">Contract</a> |
+        <a href="../itis3135/index.html">ITIS 3135</a>
+        <a href="../itis3135/website_evaluations.html">Website Evaluations</a>
+        <a href="../certifications/survey.html">Survey</a> |
+        <a href="../certifications/gallery.html">Gallery</a> |
+        <a href="../certifications/inventory.html">Inventory</a> |
+        <a href="../certifications/instructions.html">Instructions</a> |
+        <a href="../certifications/highlight.html">Highlight</a>
+    </nav>
+
+    <!-- Secondary Navigation (Non-Styled / Misc Pages) -->
+    <nav>
+        <span>Other Pages:</span>
+        <a href="../stuff/CRAPpy PaGe 🫩.HTM">Crappy Page</a>
+    </nav>
 
   <!-- Main Content -->
   <main>
@@ -19,10 +36,14 @@
   </main>
 
   <!-- Footer Include -->
-  <div data-include="../components/footer.html"></div>
+  <footer>
+  <p>© 2026 Alanah Little | UNC Charlotte</p>
+  </footer>
 
-  <!-- Include Script (required for data-include to work) -->
-  <script src="../scripts/HTMLInclude.min.js"></script>
+
+  <!-- Accumulus -->
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
