Finished edits for Certification page
Add FCC RWD Certification Pages to Course Website

--- a/certifications/gallery.html
+++ b/certifications/gallery.html
@@ -4,30 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/default.css">
-  <title>Gallery</title>
+  <title>Gallery Page</title>
 </head>
 
 <body>
 
   <!-- Header Include -->
    <nav>
-        <a href="../index.html">Home</a> |
-        <a href="../introduction.html">Introduction</a> |
-        <a href="../contract.html">Contract</a> |
-        <a href="../itis3135/index.html">ITIS 3135</a>
-        <a href="../itis3135/website_evaluations.html">Website Evaluations</a>
-        <a href="../certifications/survey.html">Survey</a> |
-        <a href="../certifications/gallery.html">Gallery</a> |
-        <a href="../certifications/inventory.html">Inventory</a> |
-        <a href="../certifications/instructions.html">Instructions</a> |
-        <a href="../certifications/highlight.html">Highlight</a>
+        <a href="/certifications/index.html"> Back</a>
+ 
     </nav>
 
-    <!-- Secondary Navigation (Non-Styled / Misc Pages) -->
-    <nav>
-        <span>Other Pages:</span>
-        <a href="../stuff/CRAPpy PaGe 🫩.HTM">Crappy Page</a>
-    </nav>
+
 
   <!-- Main Content -->
   <main>
