--- a/stuff/CRAPpy PaGe 🫩.HTM
+++ b/stuff/CRAPpy PaGe 🫩.HTM
@@ -12,7 +12,10 @@
 
 <!-- Header Include-->
  <div data-include= "../components/header.html" ></div>
-
+<nav>
+    <a href="/certifications/index.html">Back</a>|
+    <a href="/index.html">Home</a>
+</nav>
 
 
 <!-- Step 10: Put headers that are out of order (h2 before h1)
