--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <a href="introduction.html">Introduction</a>
       <a href="itis3135/index.html">ITIS 3135</a>
       <a href="/itis3135/website_evaluations.html" > Website Evaluation Page</a>
+      <a href="/certifications/index.html"> Certifications</a>
 
     </nav>
   </header>
