--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       <a href="introduction.html">Click Here</a>
     </p>
   </main>
+<p>
+  Page designed by 
+  <a href="alanahlittledesignco.com/">Alanah Little Design Co.</a> &copy; 2026
+</p>
 
   <!-- Footer Include (keep using if your class requires includes) -->
   <div data-include="../components/footer.html"></div>
