--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -28,6 +28,11 @@
     <p>This page will contain my work for ITIS 3135.</p>
   </main>
 
+  <p>
+  Page designed by 
+  <a href="alanahlittledesignco.com/">Alanah Little Design Co.</a> &copy; 2026
+</p>
+
   <!-- Footer Include -->
   <div data-include="../components/footer.html"></div>
 
