--- a/certifications/survey.html
+++ b/certifications/survey.html
@@ -22,9 +22,11 @@
   </main>
 
   <!-- Footer Include -->
-  <footer>
-  <p>© 2026 Alanah Little | UNC Charlotte</p>
-  </footer>
+ <p>
+  Page designed by 
+  <a href="alanahlittledesignco.com/">Alanah Little Design Co.</a> &copy; 2026
+</p>
+
 
 
   <!-- Accumulus -->
