--- a/introduction.html
+++ b/introduction.html
@@ -69,6 +69,11 @@
     </p>
   </main>
 
+  <p>
+  Page designed by 
+  <a href="alanahlittledesignco.com/">Alanah Little Design Co.</a> &copy; 2026
+</p>
+
   <!-- Footer Include -->
   <div data-include="../components/footer.html"></div>
 
