--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -45,6 +45,11 @@ the primary content of the document.
 </p>
 </main>
 
+<p>
+  Page designed by 
+  <a href="alanahlittledesignco.com/">Alanah Little Design Co.</a> &copy; 2026
+</p>
+
 <!-- Footer Include-->
 <div data-include="../components/footer.html"></div>
 
