--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -44,6 +44,11 @@
 
   </main>
 
+  <p>
+  Page designed by 
+  <a href="alanahlittledesignco.com/">Alanah Little Design Co.</a> &copy; 2026
+</p>
+
   <!-- Footer Include -->
   <div data-include="../components/footer.html"></div>
 
